Fixed weird stretching of container

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,8 +38,11 @@ body {
 }
 
 header {
-    color: #000000;
-    padding: 30px 20px 20px 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+header .section {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -48,32 +51,37 @@ header {
     z-index: 2;
 }
 
-header h1 {
-    font-size: 4em;
-    font-weight: 500;
-    margin-bottom: 15px;
-    text-shadow: 0px 5px 50px #eeeeee;
+header .section h1 {
+    font-size: 3em;
+    margin: 0;
+    margin-top: 20px;
 }
 
-header p {
+header .section h2 {
     font-size: 1.5em;
     color: rgb(21 21 21 / 89%);
-    padding: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
-    border-radius: 20px;
+    margin: 20px;
+    outline:#333;
+}
+
+.mainbody {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    border: #05ab75;
+    border-width:3px;
+    border-style:solid;
 }
 
 .container {
     max-width: 800px;
-    margin: 40px auto;
+    margin: 40px;
     padding: 60px;
     background: radial-gradient(circle at bottom, rgb(35 136 183 / 48%), #9db9778a);
     box-shadow: 10px 10px 40px rgb(0 0 0 / 62%);
     position: relative;
     z-index: 3;
     border-radius: 9px;
-    flex: 1;
 }
 
 .skills {
